--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author" : "Frank Craven",
 	"description": "Node project from FreeCodeCamp",
 	"keywords": ["node", "example", "application", "freecodecamp"],
+	"license" : "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
