--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Node project from FreeCodeCamp",
 	"keywords": ["node", "example", "application", "freecodecamp"],
 	"license" : "MIT",
+	"version" : "1.0.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
