--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
 	"name": "fcc-learn-npm-package-json",
-	"author" : "Frank Craven",
+	"author": "Frank Craven",
 	"description": "Node project from FreeCodeCamp",
-	"keywords": ["node", "example", "application", "freecodecamp"],
-	"license" : "MIT",
-	"version" : "1.0.0",
+	"keywords": [
+		"node",
+		"example",
+		"application",
+		"freecodecamp"
+	],
+	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"moment": "^2.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
